Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-137086

[Reg 6.2 -> 6.5] Crashing QML code

XMLWordPrintable

    • 422795f24 (dev), 5b79c45e9 (6.9), 6dd142b18 (tqtc/lts-6.8), 080f2bc25 (tqtc/lts-6.5)

      import QtQuick
      
      Item {
          id: root
          component C : Item {
              property int i: 0
          }
          
          property C c: C {  }
          root.c.i: 4
      } 

        For Gerrit Dashboard: QTBUG-137086
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            olivier.decanniere Olivier De Cannière
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes