QtQml: Do not add null property caches to compilation units

This crashes. It can happen if you have broken type references.

Fixes: QTBUG-137086
Change-Id: I48febe2d88335cafe4d5e0671d30bd92c461dc95
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
(cherry picked from commit 422795f24601966b52955830f381e12f0580ea9d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 5b79c45e9dc2bedd8672ecff5adc12e6391926bf)
(cherry picked from commit 6dd142b18e380f4790a6132fa60b9e7ce4b53b05)