tests/auto/qml/qqmllanguage/data/invalidGroupedProperty.11.qml
@@ -1,0 +1,9 @@
+import QtQml
+QtObject {
+    id: root
+    component C : QtObject {
+        property int i
+    }
+    property C c: C {}
+    root.c.i: 4
+}
